Add more integration tests